tests/specs/ecosystem/happy_js/happy_opfs/1_0_0.test
happy-js/happy-opfs/1.0.0
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'FileSystemHandle'.
 */ export function readDir(dirPath: string): Promise<Result<AsyncIterableIterator<[string, FileSystemHandle]>, Error>> {
                                                                                            ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/fs/opfs_core.ts:13:93

TS2304 [ERROR]: Cannot find name 'FileSystemHandle'.
 */ export function stat(path: string): Promise<Result<FileSystemHandle, Error>> {
                                                       ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/fs/opfs_core.ts:35:56

Found 2 errors.

error: Type checking failed.

